Work around a weird bug whereby align-item: center means that the component will never be shrunk if there is not enough space in the cross-axis. I dont know why this works, but I got the idea from https://github.com/philipwalton/flexbugs#2-column-flex-items-set-to-align-itemscenter-overflow-their-container

--- a/css/proactive.css
+++ b/css/proactive.css
@@ -111,6 +111,8 @@ button
 {
     -webkit-align-self: center;
     align-self: center;
+    /* max-width: 100% is a bit paradoxical. Without it, items with no-fill will never get shrunk if there is overflow */
+    max-width: 100%;
 }
 
 *
@@ -128,6 +130,7 @@ button
     display: -ms-flex;
     display: flex;
     box-sizing: border-box;
+    min-width: 0px;
 /*
     -webkit-box-pack: center;
     -moz-box-pack: center;
